<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <android.support.v7.preference.Preference
        android:key="@string/key_score"
        android:textColor="@color/color_3e_night"
        android:title="@string/score"/>
    <android.support.v7.preference.Preference
        android:key="@string/key_share_apk"
        android:title="@string/share_apk"/>
    <android.support.v7.preference.Preference
        android:key="@string/key_service_feedback"
        android:title="@string/service_feedback"/>
    <android.support.v7.preference.Preference
        android:key="@string/key_check_update"
        android:title="@string/check_update"/>
    <android.support.v7.preference.Preference
        android:key="@string/key_about"
        android:title="@string/about"/>
    <android.support.v7.preference.Preference
        android:key="@string/key_logout"
        android:title="@string/logout"/>
</android.support.v7.preference.PreferenceScreen>