<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:id="@+id/linearlayout_my"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_background"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_180"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:id="@+id/linearlayout_my_fragment_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:orientation="vertical">

           <ImageView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/ic_launcher_foreground"/>

            <TextView
                android:id="@+id/tv_signin_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unregistered"
                android:textColor="@android:color/white"/>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include layout="@layout/divider"/>

        <com.wan.android.view.MyItemView
            android:id="@+id/myitemview_favorite"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:src="@drawable/ic_my_favorite"
            app:is_show_switch="false"
            android:text="@string/my_collection"/>

        <include layout="@layout/divider"/>

        <com.wan.android.view.MyItemView
            android:id="@+id/myitemview_website"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:src="@drawable/ic_my_website"
            app:is_show_switch="false"
            android:text="@string/my_website"/>

        <include layout="@layout/divider"/>

        <com.wan.android.view.MyItemView
            android:id="@+id/myitemview_night_mode"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            app:is_show_switch="true"
            android:src="@drawable/ic_night_mode"
            android:text="@string/nihgt_mode"/>

        <include layout="@layout/divider"/>


    </LinearLayout>

</LinearLayout>